Fri, 07 Apr 2006 20:06:29 +0200 <thp@perli.net>
	* Make iPod mountpoint configurable (gPodderLib, glade GUI)
	* Display error message when iPod cannot be found/accessed
	* Updated gpodder.desktop file
	* Updated german translation
	* Updated deb package source for upload to Ubuntu's REVU
	* Fixed BUG that prevented user from adding channels (huh!?)

Fri, 07 Apr 2006 04:59:01 +0200 <thp@perli.net>
	* Added "Suggests" to the Debian control file
	* Updated Debian changelog, pushed version of debian package
	* Pushed version date in bin/gpodder

Fri, 07 Apr 2006 03:33:18 +0200 <thp@perli.net>
	+ Added new XML tag to localDB so we can save channel metdata
	* Channel metadata save/read functions
	* Added sync_to_devices metadata field to podcastChannel
	* Disabled some unneeded debug output
	* Callback-function support in libipodsync (for GUI feedback)
	* iPod synchronization status window
	+ Added data/artwork/* stuff for iPod sync window graphics
	* iPod synchronization - check if an episode is already on iPod
	* call "sync" on episode copy end to iPod to show real progress
	* Sync all channels (that are enabled) instead of just one to iPod
	* Added "sync to devices" to Channel Editor window
	* Updated German translation
	* Updated TODO list

Thu, 06 Apr 2006 15:38:45 +0200 <thp@perli.net>
	* Applied patch from Ortwin Forster (ortwin@videotron.ca) to fix 
	  special characters in XML files (escape ampersands, ...)
	* Applied patch from Alain Tauch to search for *.desktop files in 
	  the libplayers in more than one directory
	+ Added French translation (Thanks to Alain Tauch)
	* Experimental iPod sync stuff (see doc/dev/ipod-sync.txt)
	* Added libipodsync and functionality
	* Added iPod sync + cleanup menu items in gladefile
	* iPod support will always remain OPTIONAL for gPodder, and gPodder 
	  will keep to have all functionality (except iPod-related of 
	  course) without the user having to have an iPod. If you don't 