@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Fri Apr  7 20:11:08 2006
+# Generated on Fri Apr  7 20:36:24 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
