@@ -1,3 +1,6 @@
+Fri, 07 Apr 2006 21:22:11 +0200 <thp@perli.net>
+	* Put podcasts onto the iPod in a more iTunes-like way
+
 Fri, 07 Apr 2006 20:06:29 +0200 <thp@perli.net>
 	* Make iPod mountpoint configurable (gPodderLib, glade GUI)
 	* Display error message when iPod cannot be found/accessed
